syntax = "proto3";

option go_package = "github.com/xryar/golang-grpc-ecommerce/pb/cart";

import "common/base_response.proto";
import "buf/validate/validate.proto";

package cart;

service CartService {
    rpc AddProductToCart (AddProductToCartRequest) returns (AddProductToCartResponse);
    rpc ListCart (ListCartRequest) returns (ListCartResponse);
}

message AddProductToCartRequest {
    string product_id = 1 [(buf.validate.field).string = { min_len: 1, max_len: 255 }];
}

message AddProductToCartResponse {
    common.BaseResponse base = 1;
    string id = 2;
}

message ListCartRequest {}

message ListCartResponseItem {
    string product_id = 1;
    string product_name = 2;
    string product_image_url = 3;
    double product_price = 4;
    int64 quantity = 5;
}

message ListCartResponse {
    common.BaseResponse base = 1;
    repeated ListCartResponseItem items = 2;
}