syntax = "proto3";

option go_package = "github.com/xryar/golang-grpc-ecommerce/pb/order";

import "common/base_response.proto";
import "buf/validate/validate.proto";

package order;

service OrderService {
    rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse);
}

message CreateOrderRequestProductItem {
    string id = 1;
    int64 quantity = 2;
}

message CreateOrderRequest {
    string full_name = 1 [(buf.validate.field).string = { min_len:1, max_len: 255 }];
    string address = 2 [(buf.validate.field).string = { min_len:1, max_len: 255 }];
    string phone_number = 3 [(buf.validate.field).string = { min_len:1, max_len: 255 }];
    string notes = 4 [(buf.validate.field).string = { max_len: 255 }];
    repeated CreateOrderRequestProductItem products = 5;
}

message CreateOrderResponse {
    common.BaseResponse base = 1;
    string id = 2;
}